# Accumulator

./: CMakeLists.txt  README.md  presentation.md
include/lib-acc/: Accumulator.hpp  Feature_Utilities.hpp  Features.hpp  LogFormat.hpp  Pretty_Printer.hpp  Shell_Printer.hpp  Stats_Aggregator.hpp  Stopwatch.hpp
scripts/: plot-log-results.py
src/: Thread_Pool.hpp  demo1.cpp  demo2.cpp  demo3.cpp
test/: CMakeLists.txt  TEST_Accumulator.cpp  TEST_FeatureUtilities.cpp  TEST_Features.cpp  TEST_boost.cpp
